# game_framework

./: pyproject.toml
gaming_framework/geometry/: bounding_box.py  circle.py  collision.py  line.py  point.py  polygon.py  rectangle.py  shape.py
gaming_framework/physics/: body.py  body_pair.py  collision_shape.py  quadtree.py  spatial_hash.py  vector.py  world.py
gaming_framework/scenes/: layer.py  scene.py  scene_manager.py  scene_stack.py
gaming_framework/spatial_structures/: quadtree.py  spatial_hash.py  spatial_object.py  spatial_structure.py
gaming_framework/system/: events.py
tests/geometry/collisions/: test_point_to_circle_collisions.py  test_point_to_line_collisions.py  test_point_to_point_collision.py  test_point_to_polygon_collision.py  test_point_to_rectangle_collision.py
tests/simple/: game.py  moving_balls.py  wall.py
